# broodwarWineBot

./: .gitignore  1-download-starcraft.sh  2-install-bwapi.sh  3-compile_bot.sh  4-run-starcraft.sh  LICENSE  Makefile  README.md  compile_bot.sh  flake.nix  run-starcraft.sh  run.sh  setup.sh
react-web/: REFACTORING.md  (+1 more)
rustbot/: Cargo.toml  build.sh
rustbot/.cargo/: config.toml
rustbot/src/: bot.rs  main.rs  map.rs  status.rs  status_webserver.rs  utils.rs
rustbot/src/utils/: build_location_utils.rs  build_order_management.rs  building_stuff.rs  game_state.rs  game_status.rs  http_status_callbacks.rs  map_status.rs  military.rs  military_management.rs  mod.rs  pathing.rs  region_stuff.rs  worker_management.rs  worker_status.rs
rustbot/src/utils/build_orders/: build_order_item.rs  pool_speed_expand.rs
rustbot/src/utils/building_stuff/: build_location_utils.rs  creature_stuff.rs  expansion_location_stuff.rs  mod.rs  researching_stuff.rs  structure_stuff.rs
rustbot/src/utils/map_utils/: pathing.rs  region_stuff.rs
rustbot/src/utils/military/: avoid_enemy_movement_utils.rs  military_management.rs  squad_attack_workers.rs  squad_attacking.rs  squad_defend.rs  squad_models.rs  squad_mutas.rs
rustbot/web/: app.js  base.css  index.html  styles.css
rustbot/web/js/: expandable-section.css  expandable-section.js  main.js  pollingControls.js  service.js  state.js  ui.js
rustbot/web/js/build-order/: build-order-polling.js  build-order-ui.js  build-order.css
rustbot/web/js/features/: build-order.js  game-speed.js  larvae.js  unit-orders.js  worker-assignments.js
(+101 files in other folders)
