[package]
name = "rustbot"
version = "0.1.0"
edition = "2021"

[dependencies]
rsbwapi = "3.6.3"
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio-tungstenite = "0.24"
futures-util = "0.3"
tower-http = { version = "0.6", features = ["fs", "cors"] }
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
